--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -18,6 +18,34 @@ author:
         city: "Brighton"
         country: "UK"
         postal-code: "BN1 9RH"
+        author:
+  - name: Giulia Poerio
+    orcid: 0000-0002-2343-5109
+    roles: 
+    affiliations:
+      affiliations:
+      - ref: "id1"
+      - name: "University of Sussex"
+        department:  "Sussex Centre for Consciousness Science"
+  - name: Magdalena Pfaff
+    orcid: 0009-0006-2386-7936
+    roles:
+      - Data curation
+      - Writing – original draft
+    affiliations:
+      - ref: "id1"
+  - name: Robyn Scharte
+      orcid: 
+      roles: 
+      affiliations:
+        - ref: "id1"
+  - name: Raquel Nogueira Arjona
+      orcid: 0000-0002-5998-701X
+      roles: 
+      affiliations:
+        - ref: "id1"
+        - name: "University of Sussex"
+          department: "Sussex Addictions Research and Intervention Centre"
 # author-note:
 #   status-changes: 
 #     affiliation-change: null
@@ -54,13 +82,6 @@ author:
     #   - Validation
     #   - Visualization
     #   - Writing – original draft
-  - name: Magdalena Pfaff
-    orcid: 0009-0006-2386-7936
-    roles:
-      - Data curation
-      - Writing – original draft
-    affiliations:
-      - ref: "id1"
   - name: Dominique Makowski
     corresponding: true
     orcid: 0000-0001-5375-9967
@@ -211,10 +232,10 @@ While combining these studies might provide a more robust and generalizable unde
 
 Our search focused on studies citing the original IAS validation paper [@murphy2019], identifying 136 papers (as of 01/05/2024).
 To qualify for inclusion, papers needed to (1) provide accessible data in open-access, (2) employ the IAS as a measure, and (3) report individual IAS items scores.
-We also included the data of four unpublished studies.
+We also included the data of five unpublished studies.
 A total of 16 datasets was included (see **Table 1**).
 
-The total number of participants was 32,214 participants (Mean = 48.6 $\pm$ 13.1, 71.6\% Female).
+The total number of participants was 33,272 participants (Mean = 48.09 $\pm$ 13.1, 71.3\% Female).
 
 <!-- Note: this table is generated during data analysis -->
 
@@ -341,8 +362,11 @@ EFA suggested once again 3 factors as the optimal solution, with the first facto
 <!-- CFA -->
 We then fitted and compared using CFA various candidate structures emerging from the previous analyses, including a 1-factor model (the G-model), a 3-factor model (EFA), a 3+1 model (EFA + general factor), a 5-factor model (HCA), a 5+1 model (HCA + general factor), a 7-factor model (EGA), and a 7+1 model (EGA + general factor). The EGA model with 7 factors of item pairs provided the best fit with the lowest RMSEA (0.035), lowest $\chi^2$ (2306.30), highest CFI (0.984). It was followed by the EGA + general factor model (RMSEA = 0.054, $\chi^2$ = 6842.38, CFI = 0.952), and the HCA model with 5 factors (RMSEA = 0.078, $\chi^2$ = 13296.33, CFI = 0.907). The other models performed poorly, with RMSEA > 0.08 and CFI < 0.90. The unique-factor model yielded the lowest BIC (which takes into account the number of factors), followed by the EGA model. All the other models displayed significantly (BIC-based Bayes Factor < 1/100) lower evidence compared to the EGA model.
 
-**ANA TODO: This result was relatively consistent across unique datasets, ...**
+**ANA TODO:** 
 
+This result was relatively consistent across unique datasets, 
+
+<!-- did not converge: df1b, df2, df3, df5, df10 (missing items), df12 (errors), df15 (errors), df16,  -->
 
 ## Discussion
 
