--- a/analysis/figures/table1.tex
+++ b/analysis/figures/table1.tex
@@ -1,32 +1,33 @@
-\begin{table}[!t]
+\begin{table}
 \fontsize{6.8pt}{8.1pt}\selectfont
 \begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}lllrlrrrl}
 \toprule
-Reference & Sample & Language & N & Difference & Age (Mean  ± SD) & Range & Female \% & Availability \\ 
+Sample & Reference & Language & N & Difference & Age (Mean  ± SD) & Range & Female \% & Availability \\ 
 \midrule\addlinespace[2.5pt]
-Murphy et al., (2020) &  &  &  &  &  &  &  & osf.io/3m5nh \\ 
- & Sample 1a & English & 451 &  & 25.8 ± 8.4 & 18-69 & 69.4\% &  \\ 
- & Sample 1b & English & 375 &  & 35.3 ± 16.9 & 18-91 & 70.1\% &  \\ 
-Gaggero et al., (2021) & Sample 2 & English and Italian & 814 &  & 24.9 ± 5.3 & 18-58 & 60.3\% & osf.io/5x9sg \\ 
-Campos et al., (2022) & Sample 3 & Portuguese & 515 &  & 30.7 ± 10.5 & 18-72 & 59.6\% & osf.io/j6ef3 \\ 
-Todd et al., (2022) & Sample 4 & English & 802 &  & 48.6.6 ± 14.1* & 18-92* & 50\%* & osf.io/ms354 \\ 
-Arslanova et al., (2022) & Sample 5 & English & 143 &  & 28.5 ± 7.6 & 18-73 & 46.8\% & osf.io/mp3cy \\ 
-Brand et al., (2022) & Sample 6 & German & 619 &  & 43.9 ± 14.5 & 18-78 & 78.7\% & osf.io/xwz6g \\ 
-Brand et al., (2023) &  &  &  &  &  &  &  & osf.io/3f2h6 \\ 
- & Sample 7a & German & 522 &  & 23.4 ± 6.7 & 18-79 & 79.5\% &  \\ 
- & Sample 7b & German & 1993 &  & 32.0 ± 12.6 & 16-81 & 77.7\% &  \\ 
- & Sample 7c & German & 802 &  & 27.3 ± 9.3 & 18-72 & 68.9\% &  \\ 
-Lin et al., (2023) &  &  &  &  &  &  &  & osf.io/3eztd \\ 
- & Sample 8a & Chinese & 1166 & Collapsed "Itch" and "Tickling" & 32.5 ± 8.4 & 16-60 & 57.0\% &  \\ 
- & Sample 8b & Chinese & 500 & Collapsed "Itch" and "Tickling" & 37.4 ± 7.4 & 20-60 & 56.2\% &  \\ 
-VonMohr et al., (2023) & Sample 9 & English & 21843 &  & 56.5 ± 14.4 & 18-93 & 73.2\% & osf.io/7p9u5 \\ 
-Makowski et al., (2023a) & Sample 10 & English & 485 & Analog scales. Does not include temperature, blood sugar and cough items. & 30.1 ± 10.1 & 18-73 & 50.3\% & github.com/RealityBending/IllusionGameReliability \\ 
-Makowski et al., (2023b) & Sample 11 & English & 836 & Analog scales & 25.1 ± 11.3 & 17-76 & 53.0\% & github.com/DominiqueMakowski/PHQ4R \\ 
-Makowski et al., (2023c) & Sample 12 & English & 146 & Analog scales & 21.1 ± 4.3 & 18-50 & 76\% & github.com/RealityBending/InteroceptionPrimals \\ 
-Makowski et al., (2024) & Sample 13 & English & 737 &  & 36.8 ± 14.9 & 17, 87 & 57.3\% & github.com/RealityBending/InteroceptionScale \\ 
-Poerio et al., (2024) & Sample 14 & English & 107 &  & 26.8 ± 9.2 & 18-57 & 74.8\% & osf.io/49wbv \\ 
-Poerio et al., unpublished & Sample 15 & English & 131 &  & 30.9 ± 12.0 & 18-60 & 75.9\% &  \\ 
-Total & Sample 16 &  & 32993 &  & 48.6 ± 13.1 & 17-93 & 71.6\% &  \\ 
+ & Murphy et al., (2020) &  &  &  &  &  &  & osf.io/3m5nh \\ 
+Sample 1a &  & English & 451 &  & 25.8 ± 8.4 & 18-69 & 69.4\% &  \\ 
+Sample 1b &  & English & 375 &  & 35.3 ± 16.9 & 18-91 & 70.1\% &  \\ 
+Sample 2 & Gaggero et al., (2021) & English and Italian & 814 &  & 24.9 ± 5.3 & 18-58 & 60.3\% & osf.io/5x9sg \\ 
+Sample 3 & Campos et al., (2022) & Portuguese & 515 &  & 30.7 ± 10.5 & 18-72 & 59.6\% & osf.io/j6ef3 \\ 
+Sample 4 & Todd et al., (2022) & English & 802 &  & 48.6.6 ± 14.1* & 18-92* & 50\%* & osf.io/ms354 \\ 
+Sample 5 & Arslanova et al., (2022) & English & 143 &  & 28.5 ± 7.6 & 18-73 & 46.8\% & osf.io/mp3cy \\ 
+Sample 6 & Brand et al., (2022) & German & 619 &  & 43.9 ± 14.5 & 18-78 & 78.7\% & osf.io/xwz6g \\ 
+ & Brand et al., (2023) &  &  &  &  &  &  & osf.io/3f2h6 \\ 
+Sample 7a &  & German & 522 &  & 23.4 ± 6.7 & 18-79 & 79.5\% &  \\ 
+Sample 7b &  & German & 1993 &  & 32.0 ± 12.6 & 16-81 & 77.7\% &  \\ 
+Sample 7c &  & German & 802 &  & 27.3 ± 9.3 & 18-72 & 68.9\% &  \\ 
+ & Lin et al., (2023) &  &  &  &  &  &  & osf.io/3eztd \\ 
+Sample 8a &  & Chinese & 1166 & Collapsed "Itch" and "Tickling" & 32.5 ± 8.4 & 16-60 & 57.0\% &  \\ 
+Sample 8b &  & Chinese & 500 & Collapsed "Itch" and "Tickling" & 37.4 ± 7.4 & 20-60 & 56.2\% &  \\ 
+Sample 9 & VonMohr et al., (2023) & English & 21843 &  & 56.5 ± 14.4 & 18-93 & 73.2\% & osf.io/7p9u5 \\ 
+Sample 10 & Makowski et al., (2023a) & English & 485 & Analog scales. No Temperature, Blood sugar and Cough items & 30.1 ± 10.1 & 18-73 & 50.3\% & github.com/RealityBending/IllusionGameReliability \\ 
+Sample 11 & Makowski et al., (2023b) & English & 836 & Analog scales & 25.1 ± 11.3 & 17-76 & 53.0\% & github.com/DominiqueMakowski/PHQ4R \\ 
+Sample 12 & Makowski et al., (2023c) & English & 146 & Analog scales & 21.1 ± 4.3 & 18-50 & 76\% & github.com/RealityBending/InteroceptionPrimals \\ 
+Sample 13 & Makowski et al., (2024) & English & 737 &  & 36.8 ± 14.9 & 17, 87 & 57.3\% & github.com/RealityBending/InteroceptionScale \\ 
+Sample 14 & Poerio et al., (2024) & English & 107 &  & 26.8 ± 9.2 & 18-57 & 74.8\% & osf.io/49wbv \\ 
+Sample 15 & Poerio et al., unpublished & English & 131 &  & 30.9 ± 12.0 & 18-60 & 75.9\% &  \\ 
+Sample 16 & Arjona et al., unpublished & English & 279 &  & 26.4 ± 13.2 & 18-79 & 67.7\% &  \\ 
+Sample 17 & Total &  & 33272 &  & 48.09 ± 13.1 & 17-93 & 71.3\% &  \\ 
 \bottomrule
 \end{tabular*}
 \begin{minipage}{\linewidth}
