--- a/analysis/figures/table2.tex
+++ b/analysis/figures/table2.tex
@@ -1,32 +1,37 @@
-\begin{table}
+\begin{table}[t]
 \fontsize{6.8pt}{8.1pt}\selectfont
-\begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}lrlrr}
+\begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}lrlrrl}
 \toprule
-Questionnaire & Number of Dimensions & Assessment & Number of Items & Scoring \\ 
+Questionnaire & Number of Dimensions & Assessment & Number of Items & Scoring & Example\_Items \\ 
 \midrule\addlinespace[2.5pt]
-{\bfseries Interoceptive Related} &  &  &  &  \\ 
-MAIA-2 & 8 & Interoception & 37 & 6-point Likert scale \\ 
-BPQ & 2 & Body awareness and autonomic reactivity & 49 & 5-point Likert scale \\ 
-TAS-20 & 3 & Alexithymia & 20 & 5-point Likert scale \\ 
-BVAQ & 2 & Alexithymia & 40 & 5-point Likert scale \\ 
-{\bfseries Mood} &  &  &  &  \\ 
-BDI-II & 1 & Severity of depressive symptoms & 21 & 0-to-3-point values \\ 
-PHQ-4 & 2 & Anxiety and depressive symptoms & 4 & 5-point Likert scale \\ 
-STAI-T & 1 & Trait anxiety & 20 & 4-point Likert scale \\ 
-GAD-2 & 1 & General Anxiety & 2 & 4-point Likert scale \\ 
-{\bfseries Personality} &  &  &  &  \\ 
-NEO-FFI & 1 & Neuroticism & 12 & 5-point Likert scale \\ 
-Mini IPIP6 & 6 & Personality & 24 & Analogue scales \\ 
-BFI & 5 & Personality & 44 & 5-point Likert scale \\ 
-PID-5-SF & 5 & Dysfunctional personality traits & 25 & 4-point Likert scale \\ 
-{\bfseries Psychopathology} &  &  &  &  \\ 
-SPQ-BRU & 4 & Schizotypy & 32 & 5-point Likert scale \\ 
-MSI-BPD & 1 & Borderline personality disorder & 10 & Analogue scales \\ 
-ASQ - Short & 5 & Autistic Traits & 28 & 4-point Likert scale \\ 
-{\bfseries Beliefs and Misbeliefs} &  &  &  &  \\ 
-GCB & 5 & Conspiracy beliefs & 15 & 5-point Likert scale \\ 
-PI-18 & 1 & Beliefs about the world & 99 & 6-point Likert scale \\ 
-LIE scale & 4 & Lying tendencies & 16 & Visual analogue scales \\ 
+{\bfseries Interoceptive Related} &  &  &  &  &  \\ 
+MAIA-2 & 8 & Interoceptive awareness & 37 & 6-point Likert scale & I notice when I am uncomfortable in my body \\ 
+BPQ-SF & 2 & Body awareness and autonomic reactivity & 46 & 5-point Likert scale & My heart often beats irregularily \\ 
+BPQ-VSF & 1 & Body awareness & 12 & 5-point Likert scale & My mouth being dry \\ 
+ICQ & 3 & Interoceptive confusion & 20 & 5-point Likert scale &  I cannot tell when my muscles are sore or tight \\ 
+TAS-20 & 3 & Alexithymia & 20 & 5-point Likert scale & I have feelings I can't quite identify \\ 
+BVAQ & 5 & Alexithymia & 40 & 5-point Likert scale & I like to tell others how I feel \\ 
+{\bfseries Mood} &  &  &  &  &  \\ 
+BDI-II & 2 & Depressive symptoms severity & 21 & 4-point scale & I feel sad much of the time \\ 
+PHQ-4 & 2 & Depression and Anxiety & 4 & 4-point Likert scale & Little interest or pleasure in doing things \\ 
+PHQ-9 & 1 & Depressive symptoms & 9 & 4-point Likert scale & Feeling tired or having little energy? \\ 
+PHQ-15 & 1 & Somatic symptom distress & 15 & 3-point scale & Over the last week, how often have you been bothered by back pain? \\ 
+MFQ & 1 & Mood and affect & 13 & 3-point scale & I felt miserable or unhappy \\ 
+STAI-T & 1 & Trait anxiety & 20 & 4-point Likert scale & I worry too much about something that really doesn't matter \\ 
+GAD-7 & 1 & General anxiety disorder symptoms & 7 & 4-point Likert scale & Not being able to stop or control worrying \\ 
+{\bfseries Personality} &  &  &  &  &  \\ 
+NEO-FFI (neuroticism subscale) & 1 & Neuroticism & 12 & 5-point Likert scale & I often feel inferior to others \\ 
+Mini IPIP6 & 6 & Personality traits & 24 & Visual analogue scales & Am the life of the party \\ 
+BFI-S & 5 & Personality traits & 10 & 7-point Likert scale & I see myself as someone who ...is considerate and kind to almost everyone \\ 
+{\bfseries Psychopathology} &  &  &  &  &  \\ 
+PID-5-SFF & 5 & Maladaptive personality traits & 25 & 4-point Likert scale & Plenty of people are out to get me \\ 
+SPQ-BR & 9 & Schizotypy & 32 & 5-point Likert scale & I am an odd, unusual person \\ 
+MSI-BPD & 1 & Borderline personality disorder & 9 & Dichotomous (yes/no) & Have any of your closest relationships been troubled by a lot of arguments or repeated breakups? \\ 
+ASQ - Short & 5 & Autistic traits & 28 & 4-point Likert scale & I find it difficult to work out people’s intentions \\ 
+{\bfseries Beliefs and Misbeliefs} &  &  &  &  &  \\ 
+GCBS & 5 & Conspiracy beliefs & 15 & 5-point Likert scale & Secret organizations communicate with extraterrestrials, but keep this fact from the public \\ 
+PI-18 & 3 & Primal world beliefs & 18 & 5-point Likert scale & Nearly everything in the world is beautiful \\ 
+LIE scale & 4 & Lying tendencies & 16 & Visual analogue scales & I am a good liar \\ 
 \bottomrule
 \end{tabular*}
 \end{table}
